FinancialRecode debugging